--- a/response_letter/response_letter_JORS.qmd
+++ b/response_letter/response_letter_JORS.qmd
@@ -1,12 +1,15 @@
 ---
 title: "Response letter - Manuscript ID 249381018"
-bibliography: bibliography.bib
 format:
   pdf:
     pdf-engine: pdflatex
     papersize: a4
-    geometry: "margin = 2.5cm"
-    include-in-header: header.tex
+    geometry: "margin = 2.2cm"
+    header-includes:
+      - \usepackage{bm,mathpazo}
+      - \usepackage[lf]{FiraSans}
+      - \usepackage[scale=0.9]{sourcecodepro}
+
 ---
 
 Dear Professor Zhang
@@ -29,13 +32,15 @@ We also wanted to provide further clarification to the editor regarding the comm
 
 - Reviewer 4 (comment 5) recommended including three papers from the literature. However, these papers are not relevant to our current study. The suggested papers focus on forecasting COVID-19 variables, which is not the focus of our paper.
 
+\newpage
+
 # Reviewer 1
 
 _**General comment:** The paper deals with the prediction of time series when a disruption happens in the data. Different prediction strategies are proposed, simulated and performances are compared. The methodology is well explained, all data sources and codes are available for replication and improvements. Results are clearly exposed, criticized and recommandations are provided. In my opinion, the paper is very good n its present form and I recommend publication._
 
 **Response:** Thank you for your positive feedback on our paper. We are pleased to hear that you found the methodology well-explained and the results clearly presented. We appreciate your recommendation for publication.
 
-_Minor comments_
+_**Minor comments**_
 
 _Comment 1. one typo, line 49, page 4 : "remaining"_
 
@@ -44,6 +49,8 @@ _Comment 1. one typo, line 49, page 4 : "remaining"_
 _Comment 2. ref Trapejo (2023) is incomplete_
 
 **Response:** This paper is currently available online. We have included the designation 'In Press' in the reference to reflect its status.
+
+\newpage
 
 # Reviewer 2
 
@@ -61,9 +68,13 @@ _Comment 2: I like that the authors contrast the topic with others that it may b
 
 _Comment 3: The paper is well written, but in terms of contributions, it falls short of the expectations for an original research paper. Improvement avenues are proposing a viable new method that has advantages over these existing methods, or a large-scale empirical research with carefully curated set of actual data representing different interruption patterns from different domains._
 
-Response: Thank you for your feedback. We appreciate your comments on the writing quality and your recommendations for improving the paper's contributions. We believe that the originality of our research comes from addressing the actual challenges that many forecasters and modellers experience when their time series data is disturbed by recommending multiple viable and reliable strategies suitable for different cases. We recognise that presenting a new technique may be an exciting direction, but it is not the aim of this paper. So we have included it as a potential topic for future research in this area. Also, we included two empirical datasets from two different application areas in the paper. Moreover, the whole paper is reproducible, and the datasets and R codes are accessible on GitHub, allowing strategies to be tailored to any dataset in any application.
+**Response**: Thank you for your feedback. We appreciate your comments on the writing quality and your recommendations for improving the paper's contributions. We believe that the originality of our research comes from addressing the actual challenges that many forecasters and modellers experience when their time series data is disturbed by recommending multiple viable and reliable strategies suitable for different cases. We recognise that presenting a new technique may be an exciting direction, but it is not the aim of this paper. So we have included it as a potential topic for future research in this area. Also, we included two empirical datasets from two different application areas in the paper. Moreover, the whole paper is reproducible, and the datasets and R codes are accessible on GitHub, allowing strategies to be tailored to any dataset in any application.
+
+We have added the following paragraph in the revised manuscript.
 
 \textcolor{teal}{This study proposes multiple viable strategies for forecasting time series data interrupted by different type of events. Future research could focus on exploring new strategies for handling such disrupted time series, or enhancing probabilistic forecasting methods that are designed specifically for such data. Large-scale empirical research on further exploring which strategy may work best in different scenarios also provide useful insights.}
+
+\newpage
 
 # Reviewer 3
 
@@ -83,11 +94,11 @@ _Comment 2. The patterns of interrupted events may be very different, which make
 
 In future work, a large scale empirical study covering several types of disruption could be conducted to provide deeper insights and any possible link between strategies and types of disruption events. We have included the following paragraph in the conclusion section of the revised manuscript:
 
-\textcolor{teal}Large-scale empirical research on further exploring which strategy may work best in different scenarios also provide useful insights.}
+\textcolor{teal}{This study proposes multiple viable strategies for forecasting time series data interrupted by different type of events. Future research could focus on exploring new strategies for handling such disrupted time series, or enhancing probabilistic forecasting methods that are designed specifically for such data. Large-scale empirical research on further exploring which strategy may work best in different scenarios also provide useful insights.}
 
 _Comment 3. The authors provide some visualizations on the forecasting. This should be appreciated since it is quite straightforward. However, the authors may not expect the readers to judge the optimal strategy from these figures. Instead, the authors should consider some out-of-sample validation and may introduce some metrics or measures to evaluate the performance different strategies._
 
-Response: The visualizations are intended to help the reader understand the effect and intent of different strategies. In determining which strategy to apply in each case, it is important to think through what is being assumed, and what data are being used. We think the visualizations help the reader do that. Also, it does not always make sense to do a quantitative comparison of forecast accuracy. We have attempted to address this issue by adding the following paragraph in the discussion section.
+**Response**: The visualizations are intended to help the reader understand the effect and intent of different strategies. In determining which strategy to apply in each case, it is important to think through what is being assumed, and what data are being used. We think the visualizations help the reader do that. Also, it does not always make sense to do a quantitative comparison of forecast accuracy. We have attempted to address this issue by adding the following paragraph in the discussion section.
 
 \textcolor{teal}{Moreover, in determining which strategy to apply in each case, it is important to think through what is being assumed, and what data are being used. This is a qualitative and subjective process, and cannot simply be tackled with a quantitative comparison of forecast accuracy. The strategies we discuss have different ways of handling the disrupted period, and many of them do not seek to provide accurate forecasts during the disruption. For example, the "set to missing" strategy ignores the disrupted period, while the "estimate what might have been" strategy replaces the observations during the disruption with interpolations. In both cases, it does not make sense to evaluate the performance of the method during the disruption. Instead, the analyst needs to decide what approach makes the most sense for the application at hand.}
 
@@ -96,6 +107,8 @@ _Comment 4. If the authors focus on the interrupted time series for a certain ev
 **Response:** Thank you for your suggestion. We agree that incorporating exogenous variables related to specific events could enhance the performance of forecasting models for interrupted time series. We have acknowledged this by adding the following paragraph to the revised manuscript:
 
 \textcolor{teal}{When forecasting interrupted time series data, exogenous variables associated with specific events should be identified and incorporated where possible, regardless of which approach is employed, since they may improve forecasting model performance.}
+
+\newpage
 
 # Reviewer 4
 
@@ -129,12 +142,8 @@ We have provided the raw data, and we have provided time plots to help visualize
 
 _Comment 5. Literature must reflect the relevant studies i.e._
 
-_a) OntoCOVID: Ontology for Semantic Modeling of COVID19 Statistical Data Authors Shaukat Ali, Shah Khusro, Sajid Anwar, Abrar Ullah Publication date 2022 Book Proceedings of International Conference on Information Technology and Applications Pages 83-194 Publisher Springer, Singapore_
-
-_b) COVID-19 patient count prediction using LSTM M Iqbal, F Al-Obeidat, F Maqbool, S Razzaq, S Anwar, A Tubaishat, ... IEEE Transactions on Computational Social Systems 8 (4), 974-981_
-
-_c) Countering malicious URLs in internet of things using a knowledge-based approach and a simulated expert S Anwar, F Al-Obeidat, A Tubaishat, S Din, A Ahmad, FA Khan, G Jeon, ... IEEE Internet of Things Journal 7 (5), 4497-4504_
+  a) _OntoCOVID: Ontology for Semantic Modeling of COVID19 Statistical Data Authors Shaukat Ali, Shah Khusro, Sajid Anwar, Abrar Ullah Publication date 2022 Book Proceedings of International Conference on Information Technology and Applications Pages 83-194 Publisher Springer, Singapore_
+  b) _COVID-19 patient count prediction using LSTM M Iqbal, F Al-Obeidat, F Maqbool, S Razzaq, S Anwar, A Tubaishat, ... IEEE Transactions on Computational Social Systems 8 (4), 974-981_
+  c) _Countering malicious URLs in internet of things using a knowledge-based approach and a simulated expert S Anwar, F Al-Obeidat, A Tubaishat, S Din, A Ahmad, FA Khan, G Jeon, ... IEEE Internet of Things Journal 7 (5), 4497-4504_
 
 **Response:** Thank you for your comment. We would like to clarify that our study does not focus on forecasting COVID-19-related data and variables, such as COVID19 patient count, or statistical data, as suggested. So none of these references appear to be relevant to our paper. Instead, our paper addresses interrupted time series data caused by events like pandemics, strikes, and other disruptions. We have included literature relevant to this topic. We hope this clarifies the scope and focus of our research.
-
-# References {#references .unnumbered}
